TYPES really in plural git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7432 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/utils/hetcasl.sty
+++ b/utils/hetcasl.sty
@@ -205,7 +205,7 @@
 \newcommand{\PRED}[1][preds]{\KWC[##1]{pred}\xspace}
 \newcommand{\PREDS}[1][preds]{\KWC[##1]{preds}\xspace}
 \newcommand{\TYPE}[1][preds]{\KWC[##1]{type}\xspace}
-\newcommand{\TYPES}[1][preds]{\KWC[##1]{type}\xspace}
+\newcommand{\TYPES}[1][preds]{\KWC[##1]{types}\xspace}
 
 %% 1. mit \KWC[preds]{} default
 %% 2. mit \KWC[KW]{}
