more files with todos git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7480 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -60,6 +60,7 @@ Taxonomy/MMiSSOntology.hs:   todo: add a new edge type for equivalence which sho
 Common/LaTeX_funs.hs:   TODO:
 Common/LaTeX_funs.hs:          -- TODO: Build a nice correction map
 Logic/Prover.hs:{- todo:
+Common/Utils.hs:   Todo:
 
 ************************************************
 Christian
@@ -79,8 +80,6 @@ Till
 
 Bitte auch aus folgenden Files die todo-Listen nach Trac verschieben:
 
-Proofs/Automatic.hs:todo in general:
-Proofs/Automatic.hs:{- todo: implement apply for GlobDecomp and Subsumption
 Proofs/EdgeUtils.hs:{- todo: also treat conservativity proof status in computation of proof basis
 Proofs/EdgeUtils.hs:    _ -> Right False  -- todo: also treat conservativity proof status
 Proofs/Global.hs:todo for Jorina:
@@ -92,12 +91,17 @@ Syntax/Parse_AS_Structured.hs:   todo:
 CASL/Amalgamability.hs:TODO:
 CASL/Amalgamability.hs:                          -- TODO: generate proof obligations
 Proofs/InferBasic.hs:            -- TODO: Reimplement stuff
+Logic/Comorphism.hs:   Todo:
+Logic/Morphism.hs:   Todo:
+Static/AnalysisLibrary.hs:   Todo:
+Static/AnalysisStructured.hs:   Todo:
 Static/DevGraph.hs:                               dgl_type = GlobalDef, -- TODO: other type
 Static/DevGraph.hs:                               dgl_type = GlobalDef, -- TODO: other type
 Static/LogicStructured.hs:   TODO
 Static/LogicStructured.hs:-- see TODO section for possible extensions for (isJust enc) and
 Syntax/Parse_AS_Architecture.hs:   TODO:
 Syntax/Parse_AS_Library.hs:   TODO:
+CoCASL/Sublogic.hs:-- Todo: add projection functions when those for CASL are settled
 
 an Hiwis delegiert:
 ConstraintCASL/Logic_ConstraintCASL.hs:{- todo:
@@ -111,3 +115,5 @@ PGIP/Commands.hs: TODO :
 CspCASL/Logic_CspCASL.hs:   todo:
 CspCASL/SignCSP.hs:-- todo:  implement isInclusion, computeExt
 CspCASL/StatAnaCSP.hs:{- todo:
+
+
